Fix footer link alignment

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -43,9 +43,9 @@
 .footer nav a:nth-child(5){
   color: #fff;
   text-decoration: none;
-  padding-right: 40px;
+  padding-right: 25px;
   font-size: 14px;
-  margin-left: 100px;
+  margin-left: 40px;
   top: -5px;
   position: relative;
   cursor:pointer;
